@@ -45,7 +45,7 @@ int32_t SPVM__Net__SSLeay__ASN1_TIME__set(SPVM_ENV* env, SPVM_VALUE* stack) {
   
   void* obj_self = stack[0].oval;
   
-  int64_t t = stack[0].lval;
+  int64_t t = stack[1].lval;
   
   ASN1_TIME* self = env->get_pointer(env, stack, obj_self);
   
@@ -69,7 +69,6 @@ int32_t SPVM__Net__SSLeay__ASN1_TIME__set(SPVM_ENV* env, SPVM_VALUE* stack) {
   return 0;
 }
 
-
 int32_t SPVM__Net__SSLeay__ASN1_TIME__check(SPVM_ENV* env, SPVM_VALUE* stack) {
   
   int32_t error_id = 0;
@@ -81,6 +80,42 @@ int32_t SPVM__Net__SSLeay__ASN1_TIME__check(SPVM_ENV* env, SPVM_VALUE* stack) {
   int32_t ret = ASN1_TIME_check(self);
   
   stack[0].ival = ret;
+  
+  return 0;
+}
+
+int32_t SPVM__Net__SSLeay__ASN1_TIME__print(SPVM_ENV* env, SPVM_VALUE* stack) {
+  
+  int32_t error_id = 0;
+  
+  void* obj_self = stack[0].oval;
+  
+  void* obj_b = stack[1].oval;
+  
+  if (!obj_b) {
+    return env->die(env, stack, "The BIO object $b must be defined.", __func__, FILE_NAME, __LINE__);
+  }
+  
+  ASN1_TIME* self = env->get_pointer(env, stack, obj_self);
+  
+  BIO* b = env->get_pointer(env, stack, obj_b);
+  
+  int32_t status = ASN1_TIME_print(b, self);
+  
+  if (!(status == 1)) {
+    int64_t ssl_error = ERR_peek_last_error();
+    
+    char* ssl_error_string = env->get_stack_tmp_buffer(env, stack);
+    ERR_error_string_n(ssl_error, ssl_error_string, SPVM_NATIVE_C_STACK_TMP_BUFFER_SIZE);
+    
+    env->die(env, stack, "[OpenSSL Error]ASN1_TIME_print failed:%s.", ssl_error_string, __func__, FILE_NAME, __LINE__);
+    
+    int32_t tmp_error_id = env->get_basic_type_id_by_name(env, stack, "Net::SSLeay::Error", &error_id, __func__, FILE_NAME, __LINE__);
+    if (error_id) { return error_id; }
+    error_id = tmp_error_id;
+    
+    return error_id;
+  }
   
   return 0;
 }
